--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 
   <h1>Hot or Cold</h1>
-  <p>Enter a number between 1 and 100</p>
-  <p class="button">Submit</p>
-  <p class="button">Hint</p>
-  <p class="button">Clear</p>
-
+  <h2>Enter a number between 1 and 100</h2>
+  <div class="button-group">
+    <p class="button">Submit</p>
+    <p class="button">Hint</p>
+    <p class="button">Clear</p>
+  </div>
 
 
 </body>
