--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
   <link href="style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="question-mark.png">
 
   <title>Guessing Game</title>
 </head>
