--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <link href="style.css" rel="stylesheet">
   <link rel="shortcut icon" href="question-mark.png">
 
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script rel='javascript' src="script.js"></script>
+
+
   <title>Guessing Game</title>
 </head>
 <body>
 
   <h1>Hot or Cold</h1>
-  <h2>Enter a number between 1 and 100</h2>
+  <input type="text" value="Enter a number between 1 and 100"></input>
   <div class="button-group">
     <p class="button">Submit</p>
     <p class="button">Hint</p>
