cleaned code by makign repeats into functions

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
   <h1>Hot or Cold</h1>
   <div class="prompt"></div>
-  <input id="box" type="text" value="Enter a number between 1 and 100"></input>
-  <h3 class="guesses_left"><div class="remaining"></div>5<br>guesses<br>left</h3>
+  <input id="box" type="text" value="Guess a number between 1 and 100"></input>
+  <h3 class="guesses_left"></h3>
   <div class="button-group">
     <button type="button" id="sub" class="button">Submit</button>
     <button type="button" id="hint" class="button">Hint</button>
-    <button type="button" id="clear" class="button">Clear</button>
+    <button type="button" id="clear" class="button">Reset</button>
   </div>
 
 
